# Certiguard

./: .gitignore  README.md  frontend_plan.md  main.py
backend/: .env.example  pyproject.toml
backend/src/: config.py  ml_output.py
backend/src/audit/: __init__.py  exporters.py  merkle.py  record_generator.py  report_generator.py
backend/src/extraction/: ai_entity_extractor.py  criterion_segmenter.py  entity_extractor.py  layout_analyzer.py  ml_entity_extractor.py  nature_classifier.py  section_classifier.py
backend/src/harvester/: aggregator.py  chunker.py  ocr_engine.py  segment_router.py  synonym_registry.py  vlm_extractor.py
backend/src/ingestion/: crawler.py  doc_classifier.py  format_detector.py
backend/src/models/: __init__.py  audit.py  bidder.py  criterion.py  document.py  evidence.py  tender.py
backend/src/pipeline/: __init__.py  main.py  parallel_runner.py
backend/src/verdict/: __init__.py  verdict_engine.py  yellow_flag.py
backend/src/verification/: __init__.py  authority_verifier.py  consistency_checker.py  identity_binding.py  rule_engine.py  tamper_detector.py  temporal_validity.py
backend/test_data/: create_test_data.py
backend/tests/: test_backend.py  test_imports.py  test_phase1.py  test_phase2.py  test_phase3.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: BBoxOverlay.tsx  BidderCard.tsx  CriterionResult.tsx  OverrideModal.tsx  PipelineIndicator.tsx  Sidebar.tsx  SignOffModal.tsx  YellowFlagBadge.tsx
frontend/src/constants/: config.ts
frontend/src/hooks/: useApi.ts
(+8 files in other folders)
